tests/03-too_many_args.stderr
error: more arguments than expected. Expected a max of one integer type and one `no_auto_debug` flag
 --> tests/03-too_many_args:3:30
  |
3 | #[bitflag(u8, no_auto_debug, something_else)]
  |                              ^^^^^^^^^^^^^^
